# foder

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  MANIFEST.in  README.md  TRY_THIS.md  install.ps1  install.sh  pyproject.toml  run_tests.py  test_foder.py  update.sh
foder/: agent.py  config.py  llm.py  main.py  prompt.py  security.py
foder/tools/: __init__.py  dir_create.py  dir_list.py  file_read.py  file_write.py  registry.py  shell_exec.py
