[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foder"
version = "0.1.0"
description = "Local AI coding agent CLI"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
foder = "foder.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.sh", "*.ps1"]

# Exclude compiled cache from distributions
exclude = ["**/__pycache__", "**/*.pyc", "**/*.pyo"]
